atualizado requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,90 +9,201 @@ attrs=21.2.0=pyhd3eb1b0_0
 backcall=0.2.0=pyhd3eb1b0_0
 blas=1.0=openblas
 bleach=4.0.0=pyhd3eb1b0_0
+boost-cpp=1.74.0=hff03dee_4
 bottleneck=1.3.2=py38hf1fa96c_1
+branca=0.4.2=pyhd8ed1ab_0
+brotli=1.0.9=h0d85af4_6
+brotli-bin=1.0.9=h0d85af4_6
+brotlipy=0.7.0=py38h96a0964_1003
+bzip2=1.0.8=h0d85af4_4
+c-ares=1.18.1=h0d85af4_0
 ca-certificates=2021.10.8=h033912b_0
+cairo=1.16.0=he43a7df_1008
 certifi=2021.10.8=py38h50d1736_1
 cffi=1.14.6=py38h2125817_0
+cfitsio=3.470=h01dc385_7
+charset-normalizer=2.0.9=pyhd8ed1ab_0
+click=8.0.3=py38h50d1736_1
+click-plugins=1.1.1=py_0
+cligj=0.7.2=pyhd8ed1ab_1
+cryptography=36.0.0=py38h56c4533_0
+curl=7.79.1=hf45b732_1
+cycler=0.11.0=pyhd8ed1ab_0
 debugpy=1.5.1=py38he9d5cce_0
 decorator=5.1.0=pyhd3eb1b0_0
 defusedxml=0.7.1=pyhd3eb1b0_0
 entrypoints=0.3=py38_0
+expat=2.4.1=he49afe7_0
+fiona=1.8.20=py38ha02ccef_2
+folium=0.12.1.post1=pyhd8ed1ab_1
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=hab24e00_0
+fontconfig=2.13.1=h10f422b_1005
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.28.3=py38h96a0964_0
+freetype=2.10.4=h4cff582_1
+freexl=1.0.6=h0d85af4_0
+gdal=3.3.2=py38h982f63c_4
+geopandas=0.10.2=pyhd8ed1ab_1
+geopandas-base=0.10.2=pyha770c72_1
+geos=3.9.1=he49afe7_2
+geotiff=1.7.0=hb0faedc_3
+gettext=0.19.8.1=h7937167_1005
+giflib=5.2.1=hbcb3906_2
 glpk=5.0=h3cb5acd_0
 gmp=6.2.1=h2e338ed_0
+hdf4=4.2.15=hefd3b78_3
+hdf5=1.12.1=nompi_h2f0ef1a_100
+icu=68.2=he49afe7_0
+idna=3.1=pyhd3deb0d_0
 importlib-metadata=4.8.2=py38hecd8cb5_0
 importlib_metadata=4.8.2=hd3eb1b0_0
 ipopt=3.14.4=hc501a57_0
 ipykernel=6.4.1=py38hecd8cb5_1
 ipython=7.29.0=py38h01d92e1_0
 ipython_genutils=0.2.0=pyhd3eb1b0_1
+jbig=2.1=h0d85af4_2003
 jedi=0.18.0=py38hecd8cb5_1
 jinja2=3.0.2=pyhd3eb1b0_0
+joblib=1.1.0=pyhd8ed1ab_0
+jpeg=9d=hbcb3906_0
+json-c=0.15=hcb556a6_0
 jsonschema=3.2.0=pyhd3eb1b0_2
 jupyter_client=7.0.6=pyhd3eb1b0_0
 jupyter_core=4.9.1=py38hecd8cb5_0
 jupyterlab_pygments=0.1.2=py_0
+kealib=1.4.14=ha22a8b1_3
+kiwisolver=1.3.2=py38h12bbefe_1
+krb5=1.19.2=hcfbf3a7_3
+lcms2=2.12=h577c468_0
+lerc=2.2.1=h046ec9c_0
 libblas=3.9.0=12_osx64_openblas
+libbrotlicommon=1.0.9=h0d85af4_6
+libbrotlidec=1.0.9=h0d85af4_6
+libbrotlienc=1.0.9=h0d85af4_6
+libcblas=3.9.0=12_osx64_openblas
+libcurl=7.79.1=hf45b732_1
 libcxx=12.0.0=h2f01273_0
+libdap4=3.20.6=h3e144a0_2
+libdeflate=1.7=h35c211d_5
+libedit=3.1.20210910=hca72f7f_0
+libev=4.33=haf1e3a3_1
 libffi=3.3=hb1e8313_2
+libgdal=3.3.2=h053b6da_4
 libgfortran=5.0.0=9_3_0_h6c81a4c_23
 libgfortran5=9.3.0=h6c81a4c_23
+libglib=2.68.4=hd556434_0
+libiconv=1.16=haf1e3a3_0
+libkml=1.3.0=h8fd9edb_1014
 liblapack=3.9.0=12_osx64_openblas
+libnetcdf=4.8.1=nompi_h6609ca0_101
+libnghttp2=1.43.0=h6f36284_1
 libopenblas=0.3.18=openmp_h3351f45_0
+libpng=1.6.37=h7cec526_2
+libpq=13.3=hea3049e_0
+librttopo=1.1.0=h5413771_6
 libsodium=1.0.18=h1de35cc_0
+libspatialindex=1.9.3=he49afe7_4
+libspatialite=5.0.1=hfc891e7_9
+libssh2=1.10.0=h52ee1ee_2
+libtiff=4.3.0=h1167814_1
+libwebp-base=1.2.1=h0d85af4_0
+libxml2=2.9.12=h93ec3fd_0
+libzip=1.8.0=h8b0c345_1
 llvm-openmp=12.0.1=hda6cdc1_1
+lz4-c=1.9.3=he49afe7_1
+mapclassify=2.4.3=pyhd8ed1ab_0
 markupsafe=2.0.1=py38h9ed2024_0
+matplotlib=3.5.0=py38h50d1736_0
+matplotlib-base=3.5.0=py38hc7d2367_0
 matplotlib-inline=0.1.2=pyhd3eb1b0_2
 metis=5.1.0=h2e338ed_1006
 mistune=0.8.4=py38h1de35cc_1001
 mumps-include=5.2.1=h694c41f_10
 mumps-seq=5.2.1=h805a9e9_10
+munch=2.5.0=py_0
+munkres=1.1.4=pyh9f0ad1d_0
 nbclient=0.5.3=pyhd3eb1b0_0
 nbconvert=6.1.0=py38hecd8cb5_0
 nbformat=5.1.3=pyhd3eb1b0_0
 ncurses=6.3=hca72f7f_2
 nest-asyncio=1.5.1=pyhd3eb1b0_0
+networkx=2.6.3=pyhd8ed1ab_1
 notebook=6.4.6=py38hecd8cb5_0
 numexpr=2.7.3=py38h7ec9b2a_1
 numpy=1.21.2=py38h0fa1045_0
 numpy-base=1.21.2=py38hbbe2e76_0
+olefile=0.46=pyh9f0ad1d_1
 openblas=0.3.18=openmp_h12da7db_0
+openjpeg=2.4.0=h6e7aa92_1
 openssl=1.1.1l=h0d85af4_0
 packaging=21.3=pyhd3eb1b0_0
 pandas=1.3.4=py38h743cdd8_0
 pandocfilters=1.4.3=py38hecd8cb5_1
 parso=0.8.2=pyhd3eb1b0_0
+patsy=0.5.2=pyhd8ed1ab_0
+pcre=8.45=he49afe7_0
 pexpect=4.8.0=pyhd3eb1b0_3
 pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=7.2.0=py38hef457fe_2
 pip=21.2.4=py38hecd8cb5_0
+pixman=0.40.0=hbcb3906_0
 ply=3.11=py_1
+poppler=21.09.0=h421fe55_2
+poppler-data=0.4.11=hd8ed1ab_0
+postgresql=13.3=he8fe76e_0
+proj=8.1.1=h1512c50_2
 prometheus_client=0.12.0=pyhd3eb1b0_0
 prompt-toolkit=3.0.20=pyhd3eb1b0_0
 ptyprocess=0.7.0=pyhd3eb1b0_2
 pycparser=2.21=pyhd3eb1b0_0
 pygments=2.10.0=pyhd3eb1b0_0
 pyomo=6.2=py38ha048514_0
+pyopenssl=21.0.0=pyhd8ed1ab_0
 pyparsing=3.0.4=pyhd3eb1b0_0
+pyproj=3.2.1=py38h665cf17_2
 pyrsistent=0.18.0=py38hca72f7f_0
+pysocks=1.7.1=py38h50d1736_4
 python=3.8.12=h88f2d9e_0
 python-dateutil=2.8.2=pyhd3eb1b0_0
 python_abi=3.8=2_cp38
 pytz=2021.3=pyhd3eb1b0_0
 pyzmq=22.3.0=py38he9d5cce_2
 readline=8.1=h9ed2024_0
+requests=2.26.0=pyhd8ed1ab_1
+rtree=0.9.7=py38hc59ffc2_3
+scikit-learn=1.0.1=py38h37f3bb3_2
+scipy=1.7.3=py38hd329d04_0
 scotch=6.0.9=h9f43b6f_1
+seaborn=0.11.2=hd8ed1ab_0
+seaborn-base=0.11.2=pyhd8ed1ab_0
 send2trash=1.8.0=pyhd3eb1b0_1
 setuptools=58.0.4=py38hecd8cb5_0
+shapely=1.8.0=py38h1830c62_0
 six=1.16.0=pyhd3eb1b0_0
 sqlite=3.36.0=hce871da_0
+statsmodels=0.13.1=py38hbe852b5_0
 terminado=0.9.4=py38hecd8cb5_0
 testpath=0.5.0=pyhd3eb1b0_0
+threadpoolctl=3.0.0=pyh8a188c0_0
+tiledb=2.3.4=h8370e7a_0
 tk=8.6.11=h7bc2e8c_0
 tornado=6.1=py38h9ed2024_0
 traitlets=5.1.1=pyhd3eb1b0_0
+tzcode=2021e=h0d85af4_0
+tzdata=2021e=he74cb21_0
+unicodedata2=13.0.0.post2=py38h96a0964_4
+urllib3=1.26.7=pyhd8ed1ab_0
 wcwidth=0.2.5=pyhd3eb1b0_0
 webencodings=0.5.1=py38_1
 wheel=0.37.0=pyhd3eb1b0_1
+xerces-c=3.2.3=h379762d_3
+xyzservices=2021.11.0=pyhd8ed1ab_1
 xz=5.2.5=h1de35cc_0
 zeromq=4.3.4=h23ab428_0
 zipp=3.6.0=pyhd3eb1b0_0
 zlib=1.2.11=h1de35cc_3
+zstd=1.5.0=h582d3a0_0
